--- a/branches/release_1.10.x/src/app/views/scripts/email/publication.phtml
+++ b/branches/release_1.10.x/src/app/views/scripts/email/publication.phtml
@@ -50,7 +50,7 @@ once your thesis has been processed by them.)
   <p>Please take a few moments to follow the link and complete the Graduate Exit Survey.  This is a brief and confidential questionnaire about your experience at Emory and your future plans.  It will take no more than 10 minutes to complete, and the information you, and your fellow graduates, provide is essential to our efforts to continually refine policies and practices to provide our students with the best graduate education available. </p>
 
 <p>Please follow this link to the Graduate Exit Survey:
-     <a href="https://vovici.com/wsb.dll/s/cf9eg408e6">https://vovici.com/wsb.dll/s/cf9eg408e6</a></p>
+     <a href="http://pid.emory.edu/ark:/25593/b2n1k">http://pid.emory.edu/ark:/25593/b2n1k</a></p>
 
 
 <? endif ?>
