--- a/trunk/src/app/views/scripts/view/summary.phtml
+++ b/trunk/src/app/views/scripts/view/summary.phtml
@@ -105,8 +105,8 @@
         <? $label = $field; ?>
         <? $url = $this->url(array('controller' => 'browse', 'action' => 'partneringagencies', 'name' => $field), '', true); ?>
       <? endif ?>
-      <? if ($published): ?>
-        <a href="<?= $url ?>"><?= $label ?></a><? else: ?><?= $label ?><? endif ?><? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
+      <?= $label ?>
+        <? if ($field != $fields[count($fields) - 1]): ?>; <? endif ?>
      <? endforeach ?><br/>
    <? endif  ?>
       
