(trac #947) code review updates.

--- a/src/app/views/scripts/report/index.phtml
+++ b/src/app/views/scripts/report/index.phtml
@@ -1,5 +1,4 @@
-<H1>Available Reports</H1>
-<p><small style="color:red">(PLEASE, run this report off hours, if possible.)</small></p>
+<h1>Available Reports</h1>
 <ul id="reports_ul">
   <li><a href="<?= $this->url(array("controller" => "report",
       "action" => 'summary-stat'), '', true); ?>">Summary Statistics</a></li>
