--- a/trunk/src/app/views/scripts/report/export-emails.phtml
+++ b/trunk/src/app/views/scripts/report/export-emails.phtml
@@ -8,7 +8,7 @@
   <script type="text/javascript">
   <!--
   function showYear(status) {
-    if(c=="published") {
+    if(status=="published") {
       document.getElementById("year").style.visibility="visible";
     }
     else {
