(trac #971) unify Laney Graduate School labeling.

--- a/branches/release_1.12/src/app/layouts/scripts/sidenav.phtml
+++ b/branches/release_1.12/src/app/layouts/scripts/sidenav.phtml
@@ -38,7 +38,7 @@ Browse by:
 <? endif ?>
 
 <div class="section">
-<p><a href="http://www.emory.edu/GSOAS/">Emory Graduate School</a></p>
+<p><a href="http://www.emory.edu/GSOAS/">Laney Graduate School</a></p>
 
 <p><a href="http://www.college.emory.edu/">Emory College</a></p>
 
