--- a/branches/release_1.11/src/app/views/scripts/help/index.phtml
+++ b/branches/release_1.11/src/app/views/scripts/help/index.phtml
@@ -1,7 +1,7 @@
 <div id="helpPageContent">
 <p>Most general questions about submission will be answered on our <a href="<?= $this->url(array("controller" => "docs", "action" => "instructions"), '', true); ?>">instructions page.</a></p>
 <p>Check the <a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">FAQ</a> for common problems.</p>
-<p>For general questions about submitting your thesis or dissertation, you should contact Queen Watson in the Graduate School.</p>
+<p>For general questions about submitting your thesis or dissertation, you should contact Queen Watson in the Laney Graduate School.</p>
 <p>For problems creating a PDF, please consult the support staff in ECIT, the Cox Hall Computer Lab, or the Tech staff for your individual programs.</p>
 <p>&nbsp</p>
 <p>For problems with the ETD submission software, please submit your questions using the form below:</p>
