--- a/branches/release_1.11/src/app/views/scripts/index/index.phtml
+++ b/branches/release_1.11/src/app/views/scripts/index/index.phtml
@@ -5,7 +5,7 @@
 
 <p>The Emory Electronic Theses and Dissertations (ETD) Repository is a
 joint initiative launched by the Emory University Libraries,
-the Emory Graduate School, and Emory
+the Laney Graduate School, and Emory
 College.</p>
 
 
