--- a/branches/release_1.11/src/app/views/scripts/report/index.phtml
+++ b/branches/release_1.11/src/app/views/scripts/report/index.phtml
@@ -3,9 +3,9 @@
   <li><a href="<?= $this->url(array("controller" => "report",
       "action" => 'summary-stat'), '', true); ?>">Summary Statistics</a></li>
   <li><a href="<?= $this->url(array("controller" => "report",
-      "action" => 'commencement-review'), '', true); ?>">Graduate School Commencement Report</a></li>
+      "action" => 'commencement-review'), '', true); ?>">Laney Graduate School Commencement Report</a></li>
   <li><a href="<?= $this->url(array("controller" => "report",
-    "action" => 'grad-data'), '', true); ?>">Graduate School Academic Year Report</a>
+    "action" => 'grad-data'), '', true); ?>">Laney Graduate School Academic Year Report</a>
   <?= $this->FiletypeIcon("text/csv") ?></li>
   <li><a href="<?= $this->url(array("controller" => "report",
       "action" => 'export-emails')) ?>">Export Student Emails</a>      
