--- a/trunk/src/app/views/scripts/submission/start.phtml
+++ b/trunk/src/app/views/scripts/submission/start.phtml
@@ -1,6 +1,6 @@
 <?= $this->javascript("util.js"); ?>
 <? if (! in_array($this->browserInfo->parent, $this->supported_browsers)
-       && ! preg_match("`Firefox/2\.|Firefox/3\.|Firefox/4\.|Firefox/5\.`", $_SERVER["HTTP_USER_AGENT"])): ?>
+       && ! preg_match("`Firefox/2\.|Firefox/3\.|Firefox/4\.|Firefox/5\.|Firefox/6\.|Firefox/7\.`", $_SERVER["HTTP_USER_AGENT"])): ?>
 <p class="warning">
    <span id="exclamation">!</span>
    Your browser
