Add google-site-verification content key for production site only.

--- a/branches/release_1.12/src/app/layouts/scripts/site.phtml
+++ b/branches/release_1.12/src/app/layouts/scripts/site.phtml
@@ -13,6 +13,11 @@
 <head>
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  
+<? if ($this->env == "production"): ?>
+  <meta name="google-site-verification" content="WWdn3okWneQob5r6S1Svxtf87zwE1FHre0bRMvUzPvQ" />
+<? endif ?>
+  
    <title>Emory ETDs : <?= $this->escape($this->title) ?></title>
   <?= $this->css('etd.css'); ?>
   <? if (isset($this->dc)): ?>
