--- a/trunk/src/app/views/scripts/file/edit.phtml
+++ b/trunk/src/app/views/scripts/file/edit.phtml
@@ -1,36 +1,59 @@
 <h1>Edit File Information</h1>
-<p>You may edit author and file description below.  If information is satisfactory, click on save to proceed.</p>
 
-<?=  $this->render('edit/_xforms_key.phtml'); ?>
+<p>Review and update the file description below.  PDF and supplemental files will be listed on your public ETD record based on this information, after your embargo (if any) has expired. When you are satisfied, click save to proceed.</p>
 
-<?= $this->xformText("Title", "dc:title"); ?> <br/>
-<?= $this->xformText("Author", "dc:creator"); ?> <br/>
-<?= $this->xformTextarea("Description", "dc:description"); ?> <br/>
+ <?=  $this->render('edit/_form_key.phtml'); ?>
 
- <xf:select1 ref="dc:type">
-   <xf:label>Type of resource</xf:label>
-   <xf:itemset nodeset="instance('dcmitypes')/type">
-     <xf:label ref="@display"/><xf:value ref="@value"/>
-   </xf:itemset>
-  </xf:select1>
- <br/>
+<? if (isset($this->errors)): ?> <!-- validation errors -->
+<ul class="errors">
+   <? foreach ($this->errors as $error):  ?>
+      <li><?= $error ?></li>
+    <? endforeach  ?>
+</ul>
+<? endif ?>
 
 
-<? /* these are set on upload and should not be editable by the user */ ?>
-<?= $this->xformOutput("file type", "dc:format[contains(., '/')]"); ?>
-  <?= $this->FiletypeIcon($this->etdfile->file->mimetype) ?>
-    <br/>
-<?= $this->xformOutput("pages", "dc:format[contains(., 'p.')]"); ?> <br/>
-<?= $this->xformOutput("file size (in bytes)", "dc:format[not(contains(., '/')) and not(contains(., 'p.'))]"); ?>
-  (<?= $this->readableSize($this->etdfile->dc->filesize) ?>)
-  <br/>
+<form id="file-metadata" method="post"
+   action="<?= $this->url(array('action' => 'edit', 'pid' => $this->etdfile->pid))?>" >
+   <div>
+     <label for="title" class="required
+       <?= array_key_exists('title', $this->errors) ? 'invalid' : ''?>">Title</label>
+     <?= $this->formText("title", $this->etdfile->dc->title); ?>
+     <p class="help-text">Display label for this document as it should
+   	be listed on your ETD record.</p>
+   </div>
 
-  
+   <div>
+     <label for="author">Author</label>
+     <?= $this->formText("creator", $this->etdfile->dc->creator); ?>
+     <p class="help-text">Name of the person who created the contents of this file.</p> 
+   </div>
 
- <xf:submit submission="submission">
-<xf:label>Save</xf:label>
-</xf:submit>
+   <div>
+     <label for="description">Description</label>
+     <?= $this->formTextarea("description", $this->etdfile->dc->description); ?>
+   <p class="help-text">Brief description of the file, for display on your ETD record.</p> 
+   </div>
 
-<? if ($this->env == 'development'): ?>
-  <p id="status"></p>
-<? endif ?>   
+   <div>
+     <label for="type" class="required
+       <?= array_key_exists('type', $this->errors) ? 'invalid' : ''?>">Type</label>
+     <?= $this->formSelect("type", $this->etdfile->dc->type, array(),
+     	  $this->type_options); ?>
+  <p class="help-text">Type of content; be sure to update for supplemental files such
+                                        as videos or datasets.</p> 
+   </div>
+
+  <label>Other file information</label>
+  <p>
+    <? if (isset($this->etdfile->file->mimetype)):  ?>
+      <?= $this->FiletypeIcon($this->etdfile->file->mimetype) ?>
+    <? endif ?>
+   <?= $this->readableSize($this->etdfile->dc->filesize) ?>
+   <? if (isset($this->etdfile->dc->pages)):  ?>
+     ; <?= $this->etdfile->dc->pages ?> pages.
+    <? endif ?>
+  </p>
+
+  <?= $this->formSubmit("Save", "Save", array("class" => "button")); ?>
+</form>
