update thesis info edit form to remove xforms, use standard html + js [#30642851]

--- a/src/app/views/scripts/author-info/edit.phtml
+++ b/src/app/views/scripts/author-info/edit.phtml
@@ -14,10 +14,10 @@
 <br/>
 
 <h1>Edit Contact Information</h1>
-
+       
 <div id="key">
    <b>Key:</b>
-   <p>Required fields are <span class="required"><span class="xforms-label">bold</span></span></p>
+   <p>Required fields are <span class="required label">bold</span></p>
 </div>
 
 <p> <? if ($this->etd->isRequired("send to ProQuest")): ?>
