--- a/src/app/views/scripts/edit/record.phtml
+++ b/src/app/views/scripts/edit/record.phtml
@@ -1,73 +1,60 @@
 <h1>Edit Thesis Information</h1>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+<?= $this->javascript("jquery.local.js"); ?>
+
 <p><b><?= $this->etd->title() ?></b></p>
 
-<?=  $this->render('edit/_xforms_key.phtml'); ?>
+<?=  $this->render('edit/_form_key.phtml'); ?>
 
-<p>You may change the way your name is displayed by the ETD system here.</p>
-<? /* FIXME: should author name be editable ? */ ?> 
- <xf:group ref="mods:name[mods:role/mods:roleTerm='author']">
-    <?=  $this->render('edit/_mods_name.phtml'); ?>
-    <?/* note: department now edited on separate page */ ?>
- </xf:group>
- <br/>
- <? /* note: committee chairs & members are edited on a separate form */ ?>
- <? /* note: title, abstract, & table of contents are edited on a separate form */ ?>
+<? if (isset($this->errors)): ?> <!-- validation errors -->
+<ul class="errors">
+   <? foreach ($this->errors as $error):  ?>
+      <li><?= $error ?></li>
+    <? endforeach  ?>
+</ul>
+<? endif ?>
 
- <p>Please enter the language in which your thesis or dissertation is written.</p>
-  <xf:select1 ref="mods:language/mods:languageTerm[@type='text']">
-   <xf:label>Language</xf:label>
-   <xf:itemset nodeset="instance('languages')/language">
-     <xf:label ref="@display"/><xf:value ref="@display"/>
-   </xf:itemset>
-   <? /* language 'text' is set above; when it changes, set the 3-letter code for the same language */ ?>
-   <xf:action ev:event="xforms-value-changed">
-     <xf:setvalue ref="../mods:languageTerm[@type='code']"
-      value="instance('languages')/language[@display = instance('main')/mods:language/mods:languageTerm[@type='text']]/@code"/>
-   </xf:action>
+<form id="thesis-info" method="post"> <!-- TODO: action ? -->
+   <div class="side-by-side">
+     <label for="last-name" class="required
+       <?= array_key_exists('last-name', $this->errors) ? 'invalid' : ''?>">Last name</label>
+     <?= $this->formText("last-name", $this->etd->mods->author->last); ?>
+   </div>
+   <div class="side-by-side">
+     <label for="first-name" class="required
+       <?= array_key_exists('first-name', $this->errors) ? 'invalid' : ''?>">First name</label>
+     <?= $this->formText("first-name", $this->etd->mods->author->first); ?>
+   </div>
+   <p class="help-text">Your name as you would like it to be displayed on your ETD record.</p>
+   
+   <div>
+     <label for="language" class="required
+       <?= array_key_exists('language', $this->errors) ? 'invalid' : ''?>">Language</label>
+      <p class="help-text">Select the language in which your thesis or
+            dissertation is written.</p> 
+       <?= $this->formSelect("language", $this->etd->mods->language->code, array(),
+      	   $this->language_options); ?>
+  </div>
 
-  </xf:select1>
- <br/>
-
- <?/*  umi/proquest research fields edited separately */ ?>
-
-  <p>Please enter keywords to describe your work. Enter words or phrases one at a time in the box. For each addition word or phrase, click on "add another keyword." You may add as many keywords/phrases as you wish.</p>
-  <xf:repeat id="repeat-keywords" nodeset="instance('main')/mods:subject[@authority='keyword']">
-   <?= $this->xformText("Keyword", "mods:topic"); ?>
-   <br/>
-  </xf:repeat>
-
-  <xf:trigger>
-      <xf:label>Add another keyword</xf:label>
-      <xf:action ev:event="DOMActivate">
-        <xf:insert nodeset="mods:subject[@authority='keyword']" at="last()" position="after"/>
-        <xf:setvalue ref="mods:subject[@authority='keyword']/mods:topic[last()]" value="''"/>
-       </xf:action>
-     </xf:trigger>
-      
-   <xf:trigger bind="keyword-delete-trigger">
-      <xf:label>Remove last keyword</xf:label>
-      <xf:delete ev:event="DOMActivate" nodeset="instance('main')/mods:subject[@authority='keyword']" at="last()"/>
-    </xf:trigger>  
-<br/>
-
-    
-    <p>Please enter the degree you will be receiving this submission period.</p>
-  <xf:select1 ref="mods:extension/etd:degree/etd:name">
-   <xf:label>Degree</xf:label>
-   <xf:itemset nodeset="instance('degrees')/level/degree">
-     <xf:label ref="@name"/><xf:value ref="@name"/>
-   </xf:itemset>
-  </xf:select1>
-
-  <?= $this->xformText("Degree Level", "mods:extension/etd:degree/etd:level"); ?>
-  <?= $this->xformText("Thesis type", "mods:genre"); ?>
-  <br/>
-
-  <xf:submit submission="submission">
-   <xf:label>Save</xf:label>
-</xf:submit>
-
-<? if ($this->env == 'development'): ?>
-  <p id="status"></p>
-<? endif ?>   
-
+     <label for="keywords" class="required
+       <?= array_key_exists('keywords', $this->errors) ? 'invalid' : ''?>">Keywords</label>
+   	<p class="help-text">Keywords to describe your work.
+      Enter a single word or phrase per input; add as many as you like, but at least one.  </p>
+   <div id="edit-keywords">
+        <? foreach ($this->etd->mods->keywords as $kw): ?>
+          <?= $this->formText("keywords[]", $kw->topic, array("class" => "repeating")); ?>
+        <? endforeach ?>
+             <!-- start with two blank inputs ? -->
+             <?= $this->formText("keywords[]", '', array("class" => "repeating")); ?>
+            <?= $this->formText("keywords[]", '', array("class" => "repeating")); ?>
+   <a class="add-repeating-input clear">+ Add Keyword</a>
+  </div>
+  <div>
+     <label for="degree" class="required
+       <?= array_key_exists('degree', $this->errors) ? 'invalid' : ''?>">Degree</label>
+      <p class="help-text">Select the degree which you will be receiving this submission period.</p> 
+       <?= $this->formSelect("degree", $this->etd->mods->degree->name, array(),
+      	   $this->degree_options); ?>
+  </div>
+            
+  <?= $this->formSubmit("Save", "Save", array("class" => "button")); ?>
