--- a/src/app/layouts/scripts/google_analytics.phtml
+++ b/src/app/layouts/scripts/google_analytics.phtml
@@ -1,4 +1,4 @@
-<? if ($this->env == "production" && !($this->xforms && $this->browserInfo->browser == "IE")):
+<? if ($this->env == "production"):
  	/* Google Analytics */ ?>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
