update test warning to key on 'staging' mode

--- a/src/app/layouts/scripts/site.phtml
+++ b/src/app/layouts/scripts/site.phtml
@@ -22,7 +22,7 @@
  <?= $this->javascript("projax/js/prototype.js"); ?>
 </head>
 <body>
-<? if ($this->env == "test"): ?>   
+<? if ($this->env == "staging"): ?>   
    <?= $this->render('test_warning.phtml'); ?>
 <? endif ?>
 
