--- a/src/public/css/etd.css
+++ b/src/public/css/etd.css
@@ -772,7 +772,7 @@ div#submission {
 
 div#messages { padding-bottom:5px; }
 div#messages p, .success { margin:0px; color:green;}
-div#messages p.error { color:red; }
+div#messages p.error, #setrole_status.error { color:red; }
 div#messages p.warn { color:#ef3e15; }
 
 
