--- a/src/app/layouts/scripts/_setrole.phtml
+++ b/src/app/layouts/scripts/_setrole.phtml
@@ -1,31 +1,30 @@
-<?= $this->javascript("projax/js/scriptaculous.js"); ?>
-<? require_once("projax/projax.php");
-$projax = new Projax(); ?>
-
-    <form name="set_role" method="post" 
-      action="<?= $this->url(array('controller' => 'auth', 'action' => 'setrole'), '', true) ?>">
-    Set role:
-    <? $role_opts = array("admin" => "admin",
-              "grad admin" => "grad admin",
+<form id="set_role" method="post" 
+   action="<?= $this->url(array('controller' => 'auth', 'action' => 'setrole'), '', true) ?>">
+   Set role:
+   <? $role_opts = array('' => '--',
+          'admins' => array(
+              "grad admin" => "Graduate School admin",
+              "honors admin" => "College Honors admin",
+              "candler admin" => "Candler admin",
+              "rollins admin" => "Rollins admin",
               "report viewer" => "report viewer",
-              "grad student" => "grad student",
-              "honors admin" => "honors admin",
-              "honors student" => "honors student",
-              "candler admin" => "candler admin",
-              "candler student" => "candler student",
-              "rollins admin" => "rollins admin",
-              "rollins student" => "rollins student",              
+              "admin" => "admin",
               "superuser" => "superuser",
-              "faculty" => "faculty",
-              "coordinator:Chemistry" => "grad coord - Chem",
-              "coordinator:English" => "grad coord - Eng",
-              "coordinator:Religion" => "grad coord - Religion",
-              "coordinator:Graduate Institute of the Liberal Arts" => "grad coord - ILA",
-              ); ?>
-    <?= $this->formSelect("role", $this->current_user->role, array("id" => "user_role"), $role_opts); ?>
-<script type="text/javascript">
-  <?= $projax->observe_field("user_role", array("url" => $this->url(array('controller' => 'auth', 'action' => 'setrole'), '', true), "with" => "role", "function" => "", "success" => "Element.show('setrole_success')")) ?>
-</script>
-    </form>
-    <span id="setrole_success" style="display:none">success</span>
-
+          ),
+          'students' => array(
+              "grad student" => "Graduate student",
+              "honors student" => "Honors student",
+             "candler student" => "Candler student",
+             "rollins student" => "Rollins student",
+          ),
+          "faculty" => "faculty",
+          'graduate department coordinator' => array(
+            "coordinator:Chemistry" => "Chemistry",
+            "coordinator:English" => "English",
+            "coordinator:Religion" => "Religion",
+            "coordinator:Graduate Institute of the Liberal Arts" => "ILA",
+          )
+   ); ?>
+ <?= $this->formSelect("role", $this->current_user->role, array("id" => "user_role"), $role_opts); ?>
+</form>
+<span id="setrole_status" style="display:none"></span>
